--- a/adventure/style.css
+++ b/adventure/style.css
@@ -216,8 +216,6 @@ body {
 /* Style the Serenity upgrade display to be blue and taller */
 #serenityUpgDiv {
   background: linear-gradient(135deg, #3498db, #176aa1);
-  transition: background-color 0.2s, filter 0.2s;
-  animation: prestigeGlow 2s infinite;
   font-weight: bold;
   cursor: pointer;
   font-size: 0.9em;
@@ -228,7 +226,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: filter 0.2s ease;
 }
 
 #serenityUpgDiv:hover {
@@ -361,6 +358,7 @@ body {
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
+  height: 50px !important;
   margin: 0 5px;
   cursor: pointer;
   transition: filter 0.2s ease;
@@ -636,7 +634,8 @@ body {
   cursor: not-allowed;
 }
 .task-control button.active {
-  background-color: #1e8449;
+  filter: brightness(115%) !important;
+  border: 1.5px solid #ffcc00; /* Add a border or change color */
 }
 .task-control button:hover {
   transform: scale(1.02);
@@ -808,6 +807,7 @@ footer {
   max-width: 500px;
   width: 90%;
   color: #fff;
+  overflow-y: auto;
 }
 
 /* Headings inside modals */
@@ -834,7 +834,7 @@ footer {
   border-radius: 5px;
   color: #fff;
   cursor: pointer;
-  margin: 5px;
+  margin: 4px;
   transition: background 0.2s ease, transform 0.2s ease;
 }
 
@@ -900,12 +900,12 @@ footer {
 /* Base style for all buttons in the settings modal */
 .modal-content button {
   width: 200px;
-  height: 50px;
+  height: 40px;
   font-size: 1em;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin: 5px;
+  margin: 4px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -914,8 +914,16 @@ footer {
 }
 
 /* Specific button colors with higher specificity */
+.modal-content button.btn-version {
+  background-color: #9a9794 !important;
+  color: #fff !important;
+}
 .modal-content button.btn-tutorial {
   background-color: #e67e22 !important;
+  color: #fff !important;
+}
+.modal-content button.btn-achievements {
+  background-color: #58a1d2 !important;
   color: #fff !important;
 }
 .modal-content button.btn-red {
@@ -956,6 +964,19 @@ footer {
   object-fit: fill;
   display: block;
   pointer-events: none;
+}
+
+#changelogModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1300;
 }
 
 .save-buttons-container {
@@ -1114,7 +1135,7 @@ footer {
 
 /* Each individual message */
 .message-item {
-  background: rgba(0, 0, 0, 0.336);
+  background: rgba(0, 0, 0, 0.25);
   color: #fff;
   margin: 2px 0;
   padding: 5px 10px;
@@ -1204,6 +1225,7 @@ input[type="checkbox"].custom-checkbox:checked::after {
   grid-template-columns: repeat(10, 1fr);
   gap: 10px;
   margin-top: 15px;
+  margin-bottom: 10px;
 }
 
 /* Each achievement cell */
@@ -1320,8 +1342,8 @@ input[type="checkbox"].custom-checkbox:checked::after {
   }
 
   .modal-content button {
-    height: 40px;
-    margin: 3px;
+    height: 35px;
+    margin: 2px;
   }
 
   #achievementsGrid {
