--- a/ccg/css/style.css
+++ b/ccg/css/style.css
@@ -524,6 +524,22 @@ nav#tabs { margin-bottom: 15px; }
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
+.currency-filter-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.currency-filter-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+}
+
+.currency-filter-select {
+  font-size: 0.9em;
+  padding: 2px 4px;
+}
+
 /* statistics */
 
 .stats-section {
